﻿1.1.0 (next)
------------------
+ [enhancement] Code review for fj-core 8.2.0-rc.6 [1.1.0-rc.2]
+ [enhancement] update fj-core version 8.2.0-rc.6 [1.1.0-rc.2]
+ [enhancement] update fj-bom version 1.2.3 [1.1.0-rc.1]
+ [enhancement] Added sonar cloud quality gate [1.1.0-rc.1]

1.0.1 (2023-03-26)
------------------
+ update fj-bom version 1.0.0
+ update fj-core version 8.0.4
+ maven.compiler.release property set to '8' (so the project is still compatible with java8+) [except for quarkus playground]
+ [As for the new parent version, building should be done using java11+](https://github.com/fugerit-org/fj-bom/issues/11)

1.0.0 (2023-03-19)
------------------
+ [Dropping 0. version](https://github.com/fugerit-org/fj-lib/issues/5)
+ Parent pom set to fj-bom 0.2.3
+ Changed fj-core version to 8.0.1

0.4.4 (2023-01-17)
------------------
+ Changed fj-core version to 0.8.6
+ Parent pom set to fj-bom 0.2.2
+ Added constructor to data entity for custom table names

0.4.4 (2022-11-23)
------------------
+ Changed fj-core version to 0.8.0
+ Parent pom set to fj-bom 0.2.2
+ Dependancy versions revised

0.4.3 (2022-11-07)
------------------
+ Changed version format to MAJOR.MINOR.PATH
+ Changed fj-core version to 0.7.9

0.4.2.7 (2022-08-08)
--------------------
+ Fix to custom code comment handling
+ Changed fj-core version to 0.7.6.8

0.4.2.6 (2022-08-02)
--------------------
+ Fix handling null id in loadById()
+ Changed fj-core version to 0.7.6.6

0.4.2.5 (2021-09-16)
--------------------
+ Fix for auto update field

0.4.2.4 (2021-08-13)
--------------------
+ Removed dead code in RestLoadHelperGenerator

0.4.2.3 (2021-03-15)
--------------------
+ Added initial support for spring boot rest service

0.4.2.2 (2021-02-25)
--------------------
+ Changed fj-core version to 0.7.5.3
+ Modified real class generators to avoid custom part 
+ fj-daogen-maven-plugin excluded

0.4.2.1 (2020-11-22)
--------------------
+ Added default type mapper in struct 

0.4.2.0 (2020-11-21)