@@ -5,8 +5,8 @@ import java.sql.Clob;
 
 public class TypeUtils {
 
-	public final static String TYPE_BLOB = Blob.class.getName();
+	public static final String TYPE_BLOB = Blob.class.getName();
 	
-	public final static String TYPE_CLOB = Clob.class.getName();
+	public static final String TYPE_CLOB = Clob.class.getName();
 	
 }
