@@ -33,7 +33,7 @@ public class DataEntityUserDataFacadeHelper extends BasicDataFacade<ModelUserDat
 
 	private static final long serialVersionUID = 826402211465L;
 
-	private final static String TABLE_NAME = "PUBLIC.FUGERIT.USER";
+	private static final String TABLE_NAME = "PUBLIC.FUGERIT.USER";
 
 	public DataEntityUserDataFacadeHelper() {
 		super( TABLE_NAME, UserDataRSE.DEFAULT, null );
@@ -43,20 +43,20 @@ public class DataEntityUserDataFacadeHelper extends BasicDataFacade<ModelUserDat
 		super( tableName, UserDataRSE.DEFAULT, queryView );
 	}
 
- 	public final static String SEQUENCE_NAME = "seq_id_fugerit";
+ 	public static final String SEQUENCE_NAME = "seq_id_fugerit";
 
  	@Override
  	public String getSequenceName() {
  		return SEQUENCE_NAME;
  	}
 
- 	public final static String COL_ID = "ID";
- 	public final static String COL_USERNAME = "USERNAME";
- 	public final static String COL_PASSWORD = "PASSWORD";
- 	public final static String COL_LAST_LOGIN = "LAST_LOGIN";
- 	public final static String COL_DATE_INSERT = "DATE_INSERT";
- 	public final static String COL_DATE_UPDATE = "DATE_UPDATE";
- 	public final static String COL_STATE = "STATE";
+ 	public static final String COL_ID = "ID";
+ 	public static final String COL_USERNAME = "USERNAME";
+ 	public static final String COL_PASSWORD = "PASSWORD";
+ 	public static final String COL_LAST_LOGIN = "LAST_LOGIN";
+ 	public static final String COL_DATE_INSERT = "DATE_INSERT";
+ 	public static final String COL_DATE_UPDATE = "DATE_UPDATE";
+ 	public static final String COL_STATE = "STATE";
 
 	/* loadAll( context ) is inherited from BasicDataFacade */
 
