@@ -11,7 +11,7 @@
 
 	<artifactId>fj-daogen</artifactId>
 
-	<version>1.1.0-rc.2</version>
+	<version>1.1.0-rc.3</version>
 	<packaging>pom</packaging>
 
 	<name>fj-daogen</name>
